--- a/index.html
+++ b/index.html
@@ -47,49 +47,49 @@
 
             <div class="mosaico-wraper">
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">1</div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
-
-                <div class="mosaico-single">
-                    <div class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">2</div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">3</div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
-
-                <div class="mosaico-single">
-                    <div class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">4</div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">5</div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">6</div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">7</div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single"></div>
+                    <div class="img-mosaico-single">8</div>
+                    <!--img-mosaico-single-->
+                </div>
+                <!--mosaico-single-->
+
+                <div class="mosaico-single">
+                    <div class="img-mosaico-single">9</div>
+                    <!--img-mosaico-single-->
+                    <div class="img-mosaico-single">10</div>
+                    <!--img-mosaico-single-->
+                </div>
+                <!--mosaico-single-->
+
+                <div class="mosaico-single">
+                    <div class="img-mosaico-single">11</div>
+                    <!--img-mosaico-single-->
+                    <div class="img-mosaico-single">12</div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
@@ -281,12 +281,11 @@
         <div class="container">
             <div class="depoimento-single">
                 <quote>
-                    “Estrutura e atendimento excepcionais! adorei o atendimento da Dra. Fernanda, excelente
-                    profissional.”
+                    “Estrutura e atendimento muito bons! Adorei o atendimento da Dra. Lorem, excelente profissional.”
                 </quote>
                 <div class="nome-depoimento">
                     <img src="imagens/depoimento1.png" />
-                    <span>Maria Augusta Santos</span>
+                    <span>Maria Laura Vasconcellos</span>
                 </div>
                 <!--nome-depoimento-->
             </div>
@@ -300,7 +299,7 @@
         <div class="instagram-chamada">
             <a target="_blank" href="http://instagram.com"><img src="imagens/inst.png" /></a>
             <p>Acesse o Instagram para ver mais fotos<br />
-                @dra.fernanda_slovinski</p>
+                @dra.lorem_ipsum</p>
         </div>
         <!--instagram-chamada-->
 
@@ -327,8 +326,8 @@
         <!--mosaico-social-->
         <div class="facebook-chamada">
             <a target="_blank" href="http://facebook.com"><img src="imagens/fb.png" /></a>
-            <p>Acesse o Instagram para ver mais fotos<br />
-                @dra.fernanda_slovinski</p>
+            <p>Acesse o Facebook para ver mais fotos<br />
+                @dra.lorem_ipsum</p>
         </div>
         <!--fb-chamada-->
         <div class="clear"></div>
