--- a/index.html
+++ b/index.html
@@ -47,80 +47,79 @@
 
             <div class="mosaico-wraper">
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single">1</div>
+                    <div style="background-image: url(img/mosaico_consultorio1.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single">2</div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
-
-                <div class="mosaico-single">
-                    <div class="img-mosaico-single">3</div>
-                    <!--img-mosaico-single-->
-                    <div class="img-mosaico-single">4</div>
+                    <div style="background-image: url(img/mosaico_dentista1.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single">5</div>
+                    <div style="background-image: url(img/mosaico_sorriso5.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single">6</div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
-
-                <div class="mosaico-single">
-                    <div class="img-mosaico-single">7</div>
-                    <!--img-mosaico-single-->
-                    <div class="img-mosaico-single">8</div>
+                    <div style="background-image: url(img/mosaico_predio.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single">9</div>
+                    <div style="background-image: url(img/mosaico_sorriso2.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single">10</div>
+                    <div style="background-image: url(img/mosaico_dentista2.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div class="img-mosaico-single">11</div>
+                    <div style="background-image: url(img/mosaico_sorriso1.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
-                    <div class="img-mosaico-single">12</div>
+                    <div style="background-image: url(img/mosaico_consultorio3.jpg);" class="img-mosaico-single"></div>
                     <!--img-mosaico-single-->
                 </div>
                 <!--mosaico-single-->
 
+                <div class="mosaico-single">
+                    <div style="background-image: url(img/mosaico_sorriso4.jpg);" class="img-mosaico-single"></div>
+                    <!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sorriso6.jpg);" class="img-mosaico-single"></div>
+                    <!--img-mosaico-single-->
+                </div>
+                <!--mosaico-single-->
 
-            </div>
-            <!--mosaico-wraper-->
+                <div class="mosaico-single">
+                    <div style="background-image: url(img/mosaico_sala_de_espera.jpg);" class="img-mosaico-single"></div>
+                    <!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_consultorio2.jpg);" class="img-mosaico-single"></div>
+                    <!--img-mosaico-single-->
+                </div>
+                <!--mosaico-single-->
 
-        </div>
-        <!--container-->
+            </div><!--mosaico-wraper-->
+
+            <div class="clear"></div>
+
+        </div><!--container-->
     </section>
     <!--mosaico-->
 
     <section class="servicos">
         <div class="container">
             <div class="box-servico">
-                <h2>Lorem ipsum</h2>
+                <h2>Estética Dental</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Mauris ullamcorper.</p>
             </div>
             <!--box-servico-->
 
             <div class="box-servico">
-                <h2>Lorem ipsum</h2>
+                <h2>Cirurgia</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Mauris ullamcorper.</p>
             </div>
             <!--box-servico-->
 
             <div class="box-servico">
-                <h2>Lorem ipsum</h2>
+                <h2>Periodontia</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Mauris ullamcorper.</p>
             </div>
@@ -175,12 +174,12 @@
             <!--box-video-->
 
             <div class="box-video">
-                <iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/zarLrIz5jAQ" frameborder="0" allowfullscreen></iframe>
             </div>
             <!--box-video-->
 
             <div class="box-video">
-                <iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/hKr0AU96Jpg" frameborder="0" allowfullscreen></iframe>
             </div>
             <!--box-video-->
             <div class="clear"></div>
@@ -195,23 +194,22 @@
             <div class="tratamento-container">
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Cirurgias</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate, dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>                
                 </div>
                 <!--tratamento-single-->
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Estética Dental</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Periodontia</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
@@ -222,23 +220,23 @@
             <div class="tratamento-container">
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Clareamento</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Restaurações</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
@@ -248,23 +246,23 @@
             <div class="tratamento-container">
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Próteses</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Halitose</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
                 <div class="tratamento-single">
-                    <h2>Profilaxia e Prevenção</h2>
-                    <p>Mantenha um sorriso sem doença Periodontal, livre de cálculo, cáries e outras doenças que podem
-                        ser controladas e evitadas com a ida regular ao dentista. </p>
+                    <h2>Implantes</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
+                    dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
                 </div>
                 <!--tratamento-single-->
 
@@ -281,10 +279,10 @@
         <div class="container">
             <div class="depoimento-single">
                 <quote>
-                    “Estrutura e atendimento muito bons! Adorei o atendimento da Dra. Lorem, excelente profissional.”
+                    “Excelente atendimento e estrutura! A Dra. Lorem é uma  profissional altamente qualificada.”
                 </quote>
                 <div class="nome-depoimento">
-                    <img src="imagens/depoimento1.png" />
+                    <img src="img/depoimento1.png" />
                     <span>Maria Laura Vasconcellos</span>
                 </div>
                 <!--nome-depoimento-->
@@ -297,35 +295,35 @@
 
     <section class="social">
         <div class="instagram-chamada">
-            <a target="_blank" href="http://instagram.com"><img src="imagens/inst.png" /></a>
+            <a target="_blank" href="http://instagram.com"><img src="img/inst.png" /></a>
             <p>Acesse o Instagram para ver mais fotos<br />
                 @dra.lorem_ipsum</p>
         </div>
         <!--instagram-chamada-->
 
         <div class="mosaico-social">
-            <div style="background-image:url('');" class="img-mosaico-single-social">1</div>
+            <div style="background-image:url('img/mosaico_social1.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">2</div>
+            <div style="background-image: url('img/mosaico_social2.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">3</div>
+            <div style="background-image: url('img/mosaico_social3.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">4</div>
+            <div style="background-image: url('img/mosaico_social4.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">5</div>
+            <div style="background-image: url('img/mosaico_social5.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">6</div>
+            <div style="background-image: url('img/mosaico_social6.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">7</div>
+            <div style="background-image: url('img/mosaico_social7.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">8</div>
+            <div style="background-image: url('img/mosaico_social8.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">9</div>
+            <div style="background-image: url('img/mosaico_social9.jpg');" class="img-mosaico-single-social"></div>
             <!--img-mosaico-single-social-->
         </div>
         <!--mosaico-social-->
         <div class="facebook-chamada">
-            <a target="_blank" href="http://facebook.com"><img src="imagens/fb.png" /></a>
+            <a target="_blank" href="http://facebook.com"><img src="img/fb.png" /></a>
             <p>Acesse o Facebook para ver mais fotos<br />
                 @dra.lorem_ipsum</p>
         </div>
