--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@
         </div><!--container-->
     </footer>
 
-
+    <script src="js/jquery.js"></script>
+    <script src="js/menu_responsivo.js"></script>
 </body>
 
 </html>
