--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="">quem sou</a></li>
-                    <li><a href="">depoimentos</a></li>
-                    <li><a href="">sobre</a></li>
-                    <li><a href="">contato</a></li>
+                    <li><a href="#sobre">quem sou</a></li>
+                    <li><a href="#depoimentos">depoimentos</a></li>
+                    <li><a href="#videos">vídeos</a></li>
+                    <li><a href="#contato">contato</a></li>
                 </ul>
             </nav>
 
 
             <nav class="menu-mobile">
                 <ul>
-                    <li><a href="">quem sou</a></li>
-                    <li><a href="">depoimentos</a></li>
-                    <li><a href="">sobre</a></li>
-                    <li><a href="">contato</a></li>
+                    <li><a href="#sobre">quem sou</a></li>
+                    <li><a href="#depoimentos">depoimentos</a></li>
+                    <li><a href="#videos">vídeos</a></li>
+                    <li><a href="#contato">contato</a></li>
                 </ul>
             </nav>
 
@@ -131,7 +131,7 @@
     <!--servicos-->
 
 
-    <section class="perfil-container">
+    <section id="sobre" class="perfil-container">
         <div class="container">
             <div class="perfil-wraper">
                 <div class="perfil-wraper2">
@@ -167,7 +167,7 @@
     </section>
     <!--perfil-container-->
 
-    <section class="videos">
+    <section id="videos" class="videos">
         <div class="container">
             <div class="box-video">
                 <iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
@@ -275,7 +275,7 @@
     </section>
     <!--tratamentos-->
 
-    <section class="depoimentos">
+    <section id="depoimentos" class="depoimentos">
         <h2>Depoimentos</h2>
         <div class="container">
             <div class="depoimento-single">
@@ -333,7 +333,7 @@
     </section>
     <!--social-->
 
-    <section class="contato">
+    <section id="contato" class="contato">
         <h2>Contato</h2>
         <form>
             <div class="form-wraper w100">
@@ -387,6 +387,7 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/menu_responsivo.js"></script>
+    <script src="js/menu_scroll.js"></script>
 </body>
 
 </html>
