Inserindo slick e slides

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <title>Projeto 04</title>
+    <link href="css/slick.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="shortcut icon" type="image-x/png" href="img/icone.ico">
@@ -386,6 +387,8 @@
     </footer>
 
     <script src="js/jquery.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/slides.js"></script>
     <script src="js/menu_responsivo.js"></script>
     <script src="js/menu_scroll.js"></script>
 </body>
