Inserindo slides com slick

--- a/index.html
+++ b/index.html
@@ -258,23 +258,18 @@
                     <h2>Halitose</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Implantes</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
-            </div>
-            <!--tratamento-container-->
-            <div class="clear"></div>
-        </div>
-        <!--container-->
-    </section>
-    <!--tratamentos-->
+            </div><!--tratamento-container-->
+            <!--<div class="clear"></div>-->
+        </div><!--container-->
+    </section><!--tratamentos-->
 
     <section id="depoimentos" class="depoimentos">
         <h2>Depoimentos</h2>
@@ -286,14 +281,28 @@
                 <div class="nome-depoimento">
                     <img src="img/depoimento1.png" />
                     <span>Maria Laura Vasconcellos</span>
-                </div>
-                <!--nome-depoimento-->
-            </div>
-            <!--depoimento-single-->
-        </div>
-        <!--container-->
-    </section>
-    <!--depoimentos-->
+                </div><!--nome-depoimento-->
+            </div><!--depoimento-single-->
+            <div class="depoimento-single">
+                <quote>
+                    “Excelente atendimento e estrutura! A Dra. Lorem é uma profissional altamente qualificada.”
+                </quote>
+                <div class="nome-depoimento">
+                    <img src="img/depoimento1.png" />
+                    <span>Maria Laura Vasconcellos</span>
+                </div><!--nome-depoimento-->
+            </div><!--depoimento-single-->
+            <div class="depoimento-single">
+                <quote>
+                    “Excelente atendimento e estrutura! A Dra. Lorem é uma profissional altamente qualificada.”
+                </quote>
+                <div class="nome-depoimento">
+                    <img src="img/depoimento1.png" />
+                    <span>Maria Laura Vasconcellos</span>
+                </div><!--nome-depoimento-->
+            </div><!--depoimento-single-->
+        </div><!--container-->
+    </section><!--depoimentos-->
 
     <section class="social">
         <div class="instagram-chamada">
