--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
                 </ul>
             </nav>
 
-            <div class="clear"></div>
-            <!--clear-->
-        </div>
-        <!--container-->
+            <div class="clear"></div><!--clear-->
+        </div><!--container-->
     </header>
 
     <section class="mosaico">
@@ -49,60 +47,39 @@
 
             <div class="mosaico-wraper">
                 <div class="mosaico-single">
-                    <div style="background-image: url(img/mosaico_consultorio1.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div style="background-image: url(img/mosaico_dentista1.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
+                    <div style="background-image: url(img/mosaico_consultorio1.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_dentista1.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                </div><!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div style="background-image: url(img/mosaico_sorriso5.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div style="background-image: url(img/mosaico_predio.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sorriso5.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_predio.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                </div><!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div style="background-image: url(img/mosaico_sorriso2.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div style="background-image: url(img/mosaico_sorriso6.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sorriso2.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sorriso6.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                </div><!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div style="background-image: url(img/mosaico_sorriso1.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div style="background-image: url(img/mosaico_consultorio3.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sorriso1.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_consultorio3.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                </div><!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div style="background-image: url(img/mosaico_sorriso4.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div style="background-image: url(img/mosaico_dentista2.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sorriso4.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_dentista2.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                </div><!--mosaico-single-->
 
                 <div class="mosaico-single">
-                    <div style="background-image: url(img/mosaico_sala_de_espera.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                    <div style="background-image: url(img/mosaico_consultorio2.jpg);" class="img-mosaico-single"></div>
-                    <!--img-mosaico-single-->
-                </div>
-                <!--mosaico-single-->
+                    <div style="background-image: url(img/mosaico_sala_de_espera.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                    <div style="background-image: url(img/mosaico_consultorio2.jpg);" class="img-mosaico-single"></div><!--img-mosaico-single-->
+                </div><!--mosaico-single-->
 
             </div><!--mosaico-wraper-->
 
-            <div class="clear"></div>
-
         </div><!--container-->
-    </section>
-    <!--mosaico-->
+    </section><!--mosaico-->
 
     <section class="servicos">
         <div class="container">
@@ -110,34 +87,28 @@
                 <h2>Estética Dental</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Mauris ullamcorper.</p>
-            </div>
-            <!--box-servico-->
+            </div><!--box-servico-->
 
             <div class="box-servico">
                 <h2>Cirurgia</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Mauris ullamcorper.</p>
-            </div>
-            <!--box-servico-->
+            </div><!--box-servico-->
 
             <div class="box-servico">
                 <h2>Periodontia</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Mauris ullamcorper.</p>
-            </div>
-            <!--box-servico-->
-        </div>
-        <!--container-->
-    </section>
-    <!--servicos-->
+            </div><!--box-servico-->
+        </div><!--container-->
+    </section><!--servicos-->
 
 
     <section id="sobre" class="perfil-container">
         <div class="container">
             <div class="perfil-wraper">
                 <div class="perfil-wraper2">
-                    <div class="img-perfil"></div>
-                    <!--img-perfil-->
+                    <div class="img-perfil"></div><!--img-perfil-->
                     <div class="texto-perfil">
                         <h2>DRA. LOREM IPSUM</h2>
                         <p>
@@ -157,38 +128,28 @@
                             vitae commodo diam. Cras tortor augue, condimentum non justo sit amet, porta scelerisque
                             ligula.
                         </p>
-                    </div>
-                    <!--texto-perfil-->
-                </div>
-                <!--perfil-wraper2-->
-            </div>
-            <!--perfil-wraper-->
-        </div>
-        <!--container-->
-    </section>
-    <!--perfil-container-->
+                    </div><!--texto-perfil-->
+                </div><!--perfil-wraper2-->
+            </div><!--perfil-wraper-->
+        </div><!--container-->
+    </section><!--perfil-container-->
 
     <section id="videos" class="videos">
         <div class="container">
             <div class="box-video">
                 <iframe src="https://www.youtube.com/embed/UhuoLV2u3u8" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <!--box-video-->
+            </div><!--box-video-->
 
             <div class="box-video">
                 <iframe src="https://www.youtube.com/embed/zarLrIz5jAQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <!--box-video-->
+            </div><!--box-video-->
 
             <div class="box-video">
                 <iframe src="https://www.youtube.com/embed/hKr0AU96Jpg" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <!--box-video-->
+            </div><!--box-video-->
             <div class="clear"></div>
-        </div>
-        <!--container-->
-    </section>
-    <!--videos-->
+        </div><!--container-->
+    </section><!--videos-->
 
     <section class="tratamentos">
         <h2>Tratamentos</h2>
@@ -198,26 +159,21 @@
                 <div class="tratamento-single">
                     <h2>Cirurgias</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate, dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>                
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Estética Dental</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Periodontia</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
-            </div>
-            <!--tratamento-container-->
-
+            </div><!--tratamento-container-->
 
             <div class="tratamento-container">
 
@@ -225,25 +181,21 @@
                     <h2>Clareamento</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Profilaxia e Prevenção</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Restaurações</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
-            </div>
-            <!--tratamento-container-->
+            </div><!--tratamento-container-->
 
             <div class="tratamento-container">
 
@@ -251,8 +203,7 @@
                     <h2>Próteses</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget scelerisque elit. Mauris vitae tellus vulputate,
                     dignissim nisl et, pretium nulla. Nunc volutpat scelerisque ipsum et accumsan.</p>
-                </div>
-                <!--tratamento-single-->
+                </div><!--tratamento-single-->
 
                 <div class="tratamento-single">
                     <h2>Halitose</h2>
@@ -309,39 +260,26 @@
             <a target="_blank" href="http://instagram.com"><img src="img/inst.png" /></a>
             <p>Acesse o Instagram para ver mais fotos<br />
                 @dra.lorem_ipsum</p>
-        </div>
-        <!--instagram-chamada-->
+        </div><!--instagram-chamada-->
 
         <div class="mosaico-social">
-            <div style="background-image:url('img/mosaico_social1.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social2.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social3.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social4.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social5.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social6.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social7.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social8.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-            <div style="background-image: url('img/mosaico_social9.jpg');" class="img-mosaico-single-social"></div>
-            <!--img-mosaico-single-social-->
-        </div>
-        <!--mosaico-social-->
+            <div style="background-image:url('img/mosaico_social1.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social2.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social3.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social4.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social5.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social6.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social7.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social8.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+            <div style="background-image: url('img/mosaico_social9.jpg');" class="img-mosaico-single-social"></div><!--img-mosaico-single-social-->
+        </div><!--mosaico-social-->
         <div class="facebook-chamada">
             <a target="_blank" href="http://facebook.com"><img src="img/fb.png" /></a>
-            <p>Acesse o Facebook para ver mais fotos<br />
+            <p>Acesse o Facebook para ver mais fotos<br/>
                 @dra.lorem_ipsum</p>
-        </div>
-        <!--fb-chamada-->
+        </div><!--fb-chamada-->
         <div class="clear"></div>
-    </section>
-    <!--social-->
+    </section><!--social-->
 
     <section id="contato" class="contato">
         <h2>Contato</h2>
@@ -349,27 +287,22 @@
             <div class="form-wraper w100">
                 <span>Nome:</span>
                 <input placeholder="" name="nome" type="text" />
-            </div>
-            <!--form-wraper-->
+            </div><!--form-wraper-->
             <div class="form-wraper w50">
                 <span>E-mail:</span>
                 <input placeholder="" name="e-mail" type="text" />
-            </div>
-            <!--form-wraper-->
+            </div><!--form-wraper-->
             <div class="form-wraper w50">
                 <span>Telefone:</span>
                 <input placeholder="" name="e-mail" type="text" />
-            </div>
-            <!--form-wraper-->
+            </div><!--form-wraper-->
             <div class="form-wraper w100">
                 <span>Mensagem:</span>
                 <textarea placeholder=""></textarea>
-            </div>
-            <!--form-wraper-->
+            </div><!--form-wraper-->
             <div class="form-wraper w100" style="text-align: center;">
                 <input type="submit" name="acao" value="Enviar">
-            </div>
-            <!--form-wraper-->
+            </div><!--form-wraper-->
             <div class="clear"></div>
         </form>
     </section><!--contato-->
