Atualizando a sessão de depoimentos

--- a/index.html
+++ b/index.html
@@ -236,20 +236,20 @@
             </div><!--depoimento-single-->
             <div class="depoimento-single">
                 <quote>
-                    “Excelente atendimento e estrutura! A Dra. Lorem é uma profissional altamente qualificada.”
+                    “A clínica possui uma ótima estrutura e as profissionais são muito atenciosas e competentes.”
                 </quote>
                 <div class="nome-depoimento">
                     <img src="img/depoimento1.png" />
-                    <span>Maria Laura Vasconcellos</span>
+                    <span>Joaquina Silveira</span>
                 </div><!--nome-depoimento-->
             </div><!--depoimento-single-->
             <div class="depoimento-single">
                 <quote>
-                    “Excelente atendimento e estrutura! A Dra. Lorem é uma profissional altamente qualificada.”
+                    “O atendimento foi excelente, e a higiene e a limpeza da clínica são impecáveis.”
                 </quote>
                 <div class="nome-depoimento">
                     <img src="img/depoimento1.png" />
-                    <span>Maria Laura Vasconcellos</span>
+                    <span>Marina Conceição</span>
                 </div><!--nome-depoimento-->
             </div><!--depoimento-single-->
         </div><!--container-->
